navigation fixes, 1024 px alignment adjustments

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -43,9 +43,11 @@ a {
 .intro {
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
     margin-bottom: 5px;
     text-align: left;
     align-items: center;
+    max-width: 1100px;
 }
 
 #Portfolio {
@@ -119,6 +121,7 @@ footer {
 .intro {
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 .intro img {
     order: 1;
